# hire-ai

./: .gitignore  LICENSE  README.md  pyproject.toml
hire/: __init__.py  cli.py  clipboard.py  config.py  paths.py  session.py
hire/adapters/: __init__.py  base.py  claude.py  codex.py  gemini.py
hire/commands/: __init__.py  ask.py  delete.py  sessions.py  show.py
