[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hire-ai"
version = "0.1.5"
description = "CLI to orchestrate AI agents (Claude, Codex, Gemini)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "nichiki" }
]
keywords = ["ai", "cli", "claude", "codex", "gemini", "agent", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "build>=1.0",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/nichiki/hire-ai"
Repository = "https://github.com/nichiki/hire-ai"
Issues = "https://github.com/nichiki/hire-ai/issues"

[project.scripts]
hire = "hire.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["hire"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
